deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asteroids-argo
  labels:
    app: asteroids-argo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: asteroids-argo
  template:
    metadata:
      labels:
        app: asteroids-argo
    spec:
      containers:
      - name: asteroids
        image: k8sdevaccessitoacr.azurecr.io/my-app:0e330d537a8c6111c60ed16cf774e9137e0824d6
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.5"
            memory: "256Mi"
          requests:
            cpu: "0.2"
            memory: "128Mi"
      imagePullSecrets:
      - name: acrpull
