service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asteroids-argo
spec:
  selector:
    app: asteroids-argo
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
