ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asteroids-ingress-flux
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    external-dns.alpha.kubernetes.io/hostname: asteroids-flux.k8sdevaccessito.uk
    external-dns.alpha.kubernetes.io/target: 5d25a989-ee3f-4434-88fe-bf8213aa976a.cfargotunnel.com
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/auth-url: "https://oauth2-proxy.k8sdevaccessito.uk/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth2-proxy.k8sdevaccessito.uk/oauth2/start"
    nginx.ingress.kubernetes.io/auth-response-headers: "x-auth-request-user, x-auth-request-email, authorization, x-forwarded-host"
spec:
  rules:
  - host: asteroids_flux.k8sdevaccessito.uk
    http:
      paths:
      -  pathType: Prefix
         path: /
         backend:
          service: 
            name: asteroids-argo
            port:
              number: 80
